# cloud-mastery-docs-2026

./: .envrc  .gitignore  404.html  Cloud Mastery_ Pawa-ring AI-Powered Apps.md  index.html  index2.html  mkdocs.yml  netlify.toml  pyproject.toml  readme.md  requirements.txt  sitemap.xml
.github/workflows/: deploy.yml
devops/accessing-the-application/: index.html
devops/devops-lab/: index.html
devops/setup-backend-pipeline/: index.html
devops/setup-backend-repository/: index.html
devops/setup-cloud-sql/: index.html
devops/setup-frontend-pipeline/: index.html
devops/setup-github/: index.html
docs/: CNAME  end-of-training.md  index.md  introduction.md  organize_images.sh
docs/assets/: products.json
docs/data-analytics/: data-analytics-lab.md  data-pipeline-create-function.md  data-pipeline-schedule-job.md  data-pipeline-setup-bigquery.md  data-pipeline-visualize-looker.md
docs/devops/: accessing-the-application.md  devops-lab.md  setup-backend-pipeline.md  setup-backend-repository.md  setup-cloud-sql.md  setup-frontend-pipeline.md  setup-frontend-repository.md  setup-github.md
docs/migration/: migration-access-vm.md  migration-create-image.md  migration-create-vm.md  migration-create-vpc.md  migration-dns-update.md  migration-gcloud-cli.md  migration-gcs-bucket.md  migration-import-image.md  migration-overview.md  migration-prepare-vm.md  migration-upload-image.md
docs/virtual-agent/: Untitled document.md  sokoai-agent-instructions.md  sokoai-deployment.md  (+6 more)
end-of-training/: index.html
introduction/: index.html
search/: search_index.json
(+9 files in other folders)
