[tool.poetry]
name = "api-docs"
version = "0.1.0"
description = ""
authors = ["Basil Ndonga <basil.ndonga@iprocu.re>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.5"
pymdown-extensions = "^9.9.1"
fontawesome-markdown = "^0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
